--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-./BreakoutGame
-./LedMatrixGame
+BreakoutGame/
+LedMatrixGame/
 .vscode/c_cpp_properties.json
 .vscode/arduino.json
-LedMatrixGame/assets/game-preview.jpg
-LedMatrixGame/README.md
-LedMatrixGame/LedMatrixGame.ino
